# Rust-Privesc

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
With-Always-Notify/: Cargo.toml  README.md
With-Always-Notify/src/: is_elevated.rs  main.rs  registry.rs  schtasks.rs
Without-Always-Notify/: Cargo.toml  README.md  build.rs
Without-Always-Notify/dll/src/: lib.rs
common/: Cargo.toml
common/src/: is_elevated.rs  lib.rs  registry.rs  scheduled_tasks.rs  virtual_disk.rs
dll/: Cargo.toml
dll/src/: lib.rs
privilege-escalation/virtualdisk-with-custom-os/: Cargo.toml
privilege-escalation/windir-with-familysafetymoniter-task/: Cargo.toml
uac-bypasses/mock-trusted-directories/: Cargo.toml  build.rs
uac-bypasses/mock-trusted-directories/dll/: Cargo.toml
uac-bypasses/mock-trusted-directories/dll/src/: lib.rs
uac-bypasses/mock-trusted-directories/src/: main.rs
uac-bypasses/windir-with-silentcleanup-task/: Cargo.toml  README.md
uac-bypasses/windir-with-silentcleanup-task/src/: lib.rs  main.rs
