[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.30", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_System_TaskScheduler",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_UI_Shell_PropertiesSystem",
] }
